--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <body>
     <section>
         <h1>Effective Solutions for Your Business</h1>
-        <a href="">Order Service</a>
+        <button>Order Service</button>
+
     </section> 
     <section>
         <ul>
@@ -45,16 +46,16 @@
     <section>
         <h3>Our team</h3>
         <ul>
-            <li><img src="/img/img1.png" alt="">
+            <li><img src="/img/img1.png" alt="co-worker">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p></li>
-            <li><img src="/img/img2.png" alt="">
+            <li><img src="/img/img2.png" alt="co-worker">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p></li>
-            <li><img src="/img/img3.png" alt="">
+            <li><img src="/img/img3.png" alt="co-worker">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p></li>
-            <li><img src="/img/img4.png" alt="">
+            <li><img src="/img/img4.png" alt="co-worker">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p></li>
         </ul>
