--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<header>
-    <a href="/"> <span> WEB </span> STUDIO </a>
-    <nav>
-        <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contracts</a></li>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+11 (000) 111-11-11</a></li>
-        </ul>
-    </nav>
-</header>
 <body>
+    <header>
+        <a href="/"> <span> WEB </span> STUDIO </a>
+        <nav>
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contracts</a></li>
+                <li><a href="">info@devstudio.com</a></li>
+                <li><a href="">+11 (000) 111-11-11</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
     <section>
         <h1>Effective Solutions for Your Business</h1>
         <button>Order Service</button>
@@ -26,19 +27,19 @@
     </section> 
     <section>
         <ul>
-            <li><h1>Strategy</h1><p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
-            <li><h1>Punctuality</h1><p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-            <li><h1>Diligance</h1><p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-            <li><h1>Technologies</h1><p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+            <li><h3>Strategy</h3><p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
+            <li><h3>Punctuality</h3><p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+            <li><h3>Diligance</h3><p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+            <li><h3>Technologies</h3><p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
         </ul>
     </section>
 
     <section> 
         <h2>What Are We Doing</h2>
         <ul>
-            <li><img src="/img/Rectangle 71.png" alt=""></li>
-            <li><img src="/img/Rectangle 72.png" alt=""></li>
-            <li><img src="/img/Rectangle 73.png" alt=""></li>
+            <li><img src="./img/Rectangle71.jpg" alt=""></li>
+            <li><img src="./img/Rectangle72.jpg" alt=""></li>
+            <li><img src="./img/Rectangle73.jpg" alt=""></li>
         </ul>
     </section>
 
@@ -46,23 +47,25 @@
     <section>
         <h3>Our team</h3>
         <ul>
-            <li><img src="/img/img1.png" alt="co-worker">
+            <li><img src="./img/img1.jpg" alt="co-worker">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p></li>
-            <li><img src="/img/img2.png" alt="co-worker">
+            <li><img src="./img/img2.jpg" alt="co-worker">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p></li>
-            <li><img src="/img/img3.png" alt="co-worker">
+            <li><img src="./img/img3.jpg" alt="co-worker">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p></li>
-            <li><img src="/img/img4.png" alt="co-worker">
+            <li><img src="./img/img4.jpg" alt="co-worker">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p></li>
         </ul>
     </section>
-</body>
+</main>
 <footer>
     <a href="/"> <span> WEB </span> STUDIO </a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
+</body>
+
 </html>
