--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
     <section> 
         <h2>What Are We Doing</h2>
         <ul>
-            <li><img src="./img/Rectangle71.jpg" alt=""></li>
-            <li><img src="./img/Rectangle72.jpg" alt=""></li>
-            <li><img src="./img/Rectangle73.jpg" alt=""></li>
+            <li><img src="./img/Rectangle71.jpg" alt="" width="360"></li>
+            <li><img src="./img/Rectangle72.jpg" alt="" width="360"></li>
+            <li><img src="./img/Rectangle73.jpg" alt="" width="360"></li>
         </ul>
     </section>
 
 
     <section>
-        <h3>Our team</h3>
+        <h2>Our team</h2>
         <ul>
-            <li><img src="./img/img1.jpg" alt="co-worker">
+            <li><img src="./img/img1.jpg" alt="co-worker" width="264">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p></li>
-            <li><img src="./img/img2.jpg" alt="co-worker">
+            <li><img src="./img/img2.jpg" alt="co-worker" width="264">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p></li>
-            <li><img src="./img/img3.jpg" alt="co-worker">
+            <li><img src="./img/img3.jpg" alt="co-worker" width="264">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p></li>
-            <li><img src="./img/img4.jpg" alt="co-worker">
+            <li><img src="./img/img4.jpg" alt="co-worker" width="264">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p></li>
         </ul>
