--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <section> 
         <h2>What Are We Doing</h2>
         <ul>
-            <li><img src="./img/Rectangle71.jpg" alt="" width="360"></li>
-            <li><img src="./img/Rectangle72.jpg" alt="" width="360"></li>
-            <li><img src="./img/Rectangle73.jpg" alt="" width="360"></li>
+            <li><img src="./img/Rectangle71.jpg" alt="desktop" width="360"></li>
+            <li><img src="./img/Rectangle72.jpg" alt="phone" width="360"></li>
+            <li><img src="./img/Rectangle73.jpg" alt="phone" width="360"></li>
         </ul>
     </section>
 
